# slice-view

./: .gitignore  pyproject.toml
src/: slice_view.py
tests/: test_slice_view.py
