[tool.poetry]
name = "slice-view"
version = "0.1.0"
description = ""
authors = ["Matt Woolley <matt.wool@live.com.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
pytest = "^8.3.3"
pyright = "^1.1.389"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
